--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <title>survey form</title>
-    <link rel="icon" type="image/x-icon"
-    href="./logo.png">
+    <link rel="icon" type="image/x-icon" href="./logo.png">
     <style>
         input[type=text], select {
   width: 90%;
